css fixing on mobile

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1391,6 +1391,11 @@ ul, ol {
   .topmenu {
     position: absolute;
     margin-left: 40px;
+    .topmenu-text {
+      display: inline;
+      overflow: hidden;
+      white-space: nowrap;
+    }
   }
 
   @media #{$medium-up} {
